Fixed: wflow-consoleweb - Universal Theme - Content in popup dialog is not able to scroll.  @6.0-SNAPSHOT Fixed: wflow-consoleweb - Universal Theme - Header in popup dialog is not showing.  @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/universal/css/dark.less
+++ b/wflow-consoleweb/src/main/webapp/universal/css/dark.less
@@ -340,3 +340,6 @@ main .grid-stack-item .grid-stack-item-content {
 main .grid-stack>.grid-stack-item>.ui-resizable-se, main .grid-stack>.grid-stack-item>.ui-resizable-sw {
     color: @defaultFontColor;
 }
+.popupBody #main-body-header {
+    color: @darkPrimary;
+}
