--- a/wflow-consoleweb/src/main/webapp/universal/css/light.less
+++ b/wflow-consoleweb/src/main/webapp/universal/css/light.less
@@ -368,3 +368,6 @@ main .grid-stack-item .grid-stack-item-header h4 {
 main .grid-stack-item .grid-stack-item-content {
     border-color: transparent;
 }
+.popupBody #main-body-header {
+    color: @darkPrimary;
+}
